<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rect02"
    android:padding="20dp">

    <!--Button: goback, dismiss dialog-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="@color/black"/>

    <!--TextView: dialog title-->
    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="Info Tentang Fitur Komentar"
        android:textAlignment="center"
        android:textColor="@color/young_blue"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/headlineComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="NotSibling,UnknownId"
            android:text="@string/headlineComment"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="NotSibling,UnknownId"
            android:text="@string/info1"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_below="@+id/headlineComment"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="NotSibling,UnknownId"
            android:text="@string/info2"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_below="@+id/info1"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="NotSibling,UnknownId"
            android:text="@string/info3"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_below="@+id/info2"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>


</RelativeLayout>