<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rect02"
    android:padding="20dp">

    <!--Button: goback, dismiss dialog-->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="@color/black"/>

    <!--TextView: dialog title-->
    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:padding="5dp"
        android:text="Info Aplikasi"
        android:textAlignment="center"
        android:textColor="@color/young_blue"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/tvApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fussion"
            android:layout_below="@+id/titleTv"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            tools:ignore="NotSibling"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tvVersi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versi"
            android:layout_below="@+id/tvApp"
            android:gravity="center"
            android:textStyle="normal"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/iVlogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logofs"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvVersi"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tahun_app"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_below="@+id/iVlogo"
            android:layout_marginTop="50dp"/>

    </RelativeLayout>


</RelativeLayout>